Issue #DTW-44: Fiddling with spacings

--- a/source/_base/_spacing.scss
+++ b/source/_base/_spacing.scss
@@ -2,5 +2,5 @@ $spacing-percent-medium:  2%;
 $spacing-percent-large:   4%;
 $spacing-pixel-small:     20px;
 $spacing-pixel-medium:    40px;
-$spacing-pixel-large:     100px;
-$spacing-pixel-xlarge:    150px;
+$spacing-pixel-large:     80px;
+$spacing-pixel-xlarge:    120px;
