--- a/source/_patterns/02-components/frontpage-quote.scss
+++ b/source/_patterns/02-components/frontpage-quote.scss
@@ -2,10 +2,10 @@
   @include layout-wrapper($breakpoint-largedesk);
 
   border-bottom: 1px solid $color-gray-light;
-  padding-bottom: $spacing-pixel-medium;
+  padding-bottom: $spacing-pixel-large;
+  padding-top: $spacing-pixel-medium;
 
   @include breakpoint($breakpoint-desk) {
     padding-bottom: $spacing-pixel-xlarge;
-    padding-bottom: $spacing-pixel-large;
   }
 }
